# p-adic_ssu

./: .gitignore  README.md  pyproject.toml  template.typ
src/task1/: report.typ  stochastic_parameter.py
src/task2/: bee_tran_poly.py  report.typ
src/task3/: report.typ  transitive.py
src/task4/: proection.py  report.typ
src/task5/: betaproection.py  report.typ
src/task8/: report.typ
src/task9/: report.typ
